--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,14 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
     background-color:#065535;
     background: linear-gradient(-45deg, #065535, green);
     padding-top: 10px;
     padding-bottom: 20px;
     padding-right: 40px;
     padding-left: 40px;
-    margin-top: 50px;
+    margin-top: 30px;
     box-shadow: black 0 0 9px 9px;
 }
 
@@ -32,17 +32,29 @@ body {
     background-color: lightgrey;
     margin-top: 20px;
     background: linear-gradient(45deg, lightgrey, gray);
+    box-shadow: inset black 0 0 4px 4px;
 }
 
 #buttons-container{
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 1px;
+}
+
+#clear-button-container{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+}
+
+#clear-button {
+    padding: 37px;
+    box-shadow: inset black 0 0 2px 2px;
 }
 
 .row-styles {
     display: flex;
-    gap: 5px;
+    gap: 1px;
     flex: 1;
 }
 
@@ -50,11 +62,11 @@ body {
     border-radius: .5em;
 }
 
-.button-styles {
+.buttons {
     padding: 49px;
     font-size: 40px;
-    box-shadow:black 0 0 1px 1px;
     flex: 1;
+    box-shadow: inset black 0 0 2px 2px;
 }
 
 
